--- a/css/style.css
+++ b/css/style.css
@@ -652,13 +652,25 @@ hamburger
   }
   #header .header #navbar .nav-list .links-container ul li a {
     margin-right: auto;
-    padding: 0.5rem 0 0;
     padding: 0;
-    width: 100%;
+    width: 70%;
     display: block;
-    font-weight: 500;
+    font-weight: 400;
     font-family: "Montserrat", sans-serif;
+    font-family: "Kanit", sans-serif;
     text-transform: capitalize;
+  }
+  #header .header #navbar .nav-list .links-container ul li a::after {
+    content: attr(data-after);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    color: #f0f8ff1a;
+    font-size: 2.5rem;
+    letter-spacing: 1rem;
+    z-index: -1;
+    transition: 0.3s ease letter-spacing;
   }
   #header .header #navbar .nav-list .links-container ul li i {
     width: 2.5rem;
@@ -668,7 +680,8 @@ hamburger
   }
   #header .header #navbar .nav-list .links-container .contact-links {
     background: #29323c;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     margin: 1rem 5vw;
     display: flex;
     flex-direction: column;
@@ -680,6 +693,7 @@ hamburger
     transform: translateY(1rem);
     color: #f4f4f4;
     font-size: 1rem;
+    border: 1px solid transparent;
     margin-bottom: 0.5rem;
     transition: 0.5s;
   }
@@ -783,18 +797,6 @@ hamburger
   text-align: left;
   font-family: "Montserrat", sans-serif;
   transition: 0.2s ease-in-out;
-}
-#header .header #navbar .nav-list ul li a::after {
-  content: attr(data-after);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  color: #f0f8ff1a;
-  font-size: 3em;
-  letter-spacing: 50px;
-  z-index: -1;
-  transition: 0.3s ease letter-spacing;
 }
 #header .header #navbar .nav-list ul li i {
   margin-right: 0.5em;
