--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,11 @@ hamburger
   transform: translateY(15vh);
   transition: 1s;
 }
+@media (min-width: 768px) {
+  .bottom-nav {
+    height: 7vh;
+  }
+}
 .bottom-nav .link-item {
   width: 100%;
   height: 100%;
@@ -1041,7 +1046,7 @@ hamburger
 }
 @media (min-width: 600px) {
   #home .hero #hero-h1 {
-    top: 12vh;
+    top: 15vh;
   }
 }
 #home .hero #hero-h1 h1 {
