--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&family=Montserrat:wght@100;200;400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 @import 'variables';
+@import 'mixin';
 @import 'utilities';
 @import 'header';
 @import 'hero';
