--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -142,12 +142,14 @@
             //     top: 15vh;
             // }
             h1 {
-                font-size: 2.5rem;
+                font-size: 2.25rem;
                 display: block;
-                width: fit-content;
+                // width: fit-content;
                 color: $text-white-e;
                 // font-family: 'Philosopher', sans-serif;
-                
+                @include lg {
+                    font-size: 3rem;
+                }
                 span {
                     font-family: $font-title;
                     font-weight: 500;
@@ -180,12 +182,13 @@
             }
                 // "AKA" SPAN
                 #aka {
+                    display: inline-block;
+                    font-size: 1.25rem;
+                    position: relative;
+                    color: #ddd;
+                    margin-top: .5rem;
                     span {
-                        display: inline-block;
-                        font-size: 1.25rem;
-                        position: relative;
-                        color: #ddd;
-                        margin-top: .5rem;
+                        color: inherit;
                         // opacity: 0;
                         // animation: aka 5s ease alternate;
                         // animation-delay: 12s;
