--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -71,7 +71,7 @@
     }
     
     .hero {
-        overflow: hidden;
+        // overflow: hidden;
         position: relative;
         
         // HERO IMAGE CONTAINER WITH OVERLAY BLEND MODE
@@ -122,16 +122,17 @@
         #hero-h1 {
             // margin: 1em auto;
             background: transparent;
-            padding: 5vh 0; 
-            border-radius: 5px;
-            position: absolute;
+            padding: 5vh 5vw; 
+            // border-radius: 5px;
+            position: relative;
             // border: 1px solid #fff;
+            width: 100%;
             // overflow-y: hidden;
-            // width: max-content;
             text-transform: capitalize;
-            top: 5vh;
-            left: 5vw;
+            top: 7vh;
+            // left: 5vw;
             @include md {
+                width: max-content;
                 top: 5vh;
             }
             @include xlg {
