--- a/css/style.css
+++ b/css/style.css
@@ -2572,12 +2572,13 @@ hamburger
 .work .work-items .work-item figure {
   margin: 5vh auto;
   width: 65%;
-  width: 16rem;
+  width: 10rem;
   height: 65%;
-  height: 16rem;
+  height: 10rem;
   border-radius: 0.5rem;
   overflow: hidden;
   margin: 1rem auto;
+  border: 1px solid #0004;
   padding: 0.5rem;
   border-radius: 0.25rem;
 }
@@ -2589,7 +2590,7 @@ hamburger
 }
 .work .work-items .work-item figure img {
   width: 100%;
-  height: 100%;
+  height: auto;
   border-radius: 0.5rem;
   object-fit: 100%;
   object-fit: cover;
