--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -77,20 +77,20 @@
                     height: 13rem;
                 }
                 width: 65%;
-                width: 16rem;
+                width: 10rem;
                 height: 65%;
-                height: 16rem;
+                height: 10rem;
                 border-radius: .5rem;
                 overflow: hidden;
                 margin: 1rem auto;
-                // border: 1px solid red;
+                border: 1px solid #0004;
                 padding: .5rem;
                 border-radius: .25rem;
 
 
                 img {
                     width: 100%;
-                    height: 100%;
+                    height: auto;
                     border-radius: .5rem;
                     object-fit: 100%;
                     object-fit: cover;
