--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -119,7 +119,7 @@
             }
         }
         // ANIMATED INTRO
-        #hero-slogan {
+        #hero-slogan, #hero-h1 {
             // border: 1px solid #fff;
             background: transparent;
             padding: 5vh 5vw; 
@@ -139,7 +139,7 @@
             //     top: 15vh;
             // }
             // SLOGAN 
-        .hero-title {
+        .hero-title, .slogan {
             // border: 1px solid #fff;
             // position: absolute;
             // top: 10vh;
