--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -160,14 +160,18 @@
                 color: $text-light;
                 line-height: 1.25;
             }
-            a {
+            p {
                 font-size: 1rem;
                 font-weight: 400;
                 color: $span-gold;
                 display: block;
                 color: #fff9;
-                margin-bottom: .25rem;
+                // margin-bottom: .25rem;
                 // text-decoration: underline;
+                a {
+                    color: inherit;
+                    font-size: inherit;
+                }
             }
             @include lg {
                 font-size: 3rem;
