--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -119,7 +119,7 @@
             }
         }
         // ANIMATED INTRO
-        #hero-slogan, #hero-h1 {
+        #hero-content, #hero-h1 {
             // border: 1px solid #fff;
             background: transparent;
             padding: 5vh 5vw; 
