--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -92,7 +92,7 @@
                 }
                 // end of item box shadows
                 // item headings (h1)
-                h2 {
+                h3 {
                     color: #fff;
                     padding: .5rem .5rem 0;
                     margin: .5rem auto 0;
@@ -101,7 +101,7 @@
                     font-weight: 600;
                     position: relative;
                     @media (min-width: 768px){
-                        font-size: 1.7em;
+                        font-size: 1.25rem;
                         margin: .5em auto;
                     }
                     
@@ -117,7 +117,6 @@
                     border: none;
                     background: $overlay-blue-darker;
                     border-radius: 50%;
-                    outline: 2px solid $span-gold;
                     outline: 2px solid #fff4;
                     position: relative;
                     display: grid;
