--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -161,7 +161,7 @@
                 line-height: 1.25;
             }
             p {
-                font-size: 1rem;
+                font-size: .9rem;
                 font-weight: 400;
                 color: $span-gold;
                 display: block;
