--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,6 +8,18 @@
     height: 8vh;
     // overflow: hidden;
     background: transparent;
+    isolation: isolate;
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: $overlay-blue-dark;
+        z-index: -1;
+        opacity: 0;
+        transition: .25s;
+    }
     @media (min-width: 1024px) {
         height: 15vh;
         // border: 2px solid red;
@@ -28,8 +40,12 @@
     }
     // MAIN IO
     &.header-io {
-        background-color: $overlay-blue-darker;
+        // background-color: $overlay-blue-darker;
         transition: background-color .25s;
+        transition: all .25s;
+        &::after {
+            opacity: 1;
+        }
         @media (min-width: 1024px) {
             height: 8vh;
             transition: .25s;
