--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ hamburger
   top: 0;
   width: 100%;
   height: 100%;
-  background: #29323c;
+  background: #20262e;
   z-index: -1;
   opacity: 0;
   transition: 0.25s;
