--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,7 +15,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background: $overlay-blue-dark;
+        background: $overlay-blue-darker;
         z-index: -1;
         opacity: 0;
         transition: .25s;
