--- a/css/style.css
+++ b/css/style.css
@@ -2920,8 +2920,12 @@ hamburger
   z-index: 2;
   transition: 1.5s;
 }
-.about .col-right .article-container article p .school {
-  display: block;
+@media (min-width: 768px) {
+  .about .col-right .article-container article p .title-break {
+    display: none;
+  }
+}
+.about .col-right .article-container article p .item-title {
   font-weight: 600;
   color: #29323c;
 }
@@ -2930,10 +2934,19 @@ hamburger
   color: #20262e;
   font-weight: 500;
   display: inline-block;
+  width: max-content;
   border-radius: 0.25rem;
+  transition: 0.2s;
 }
-.about .col-right .article-container article p a:hover {
-  color: #dc143c;
+@media (max-width: 820px) {
+  .about .col-right .article-container article p a:active {
+    color: #ead2a1;
+  }
+}
+@media (min-width: 820px) {
+  .about .col-right .article-container article p a:hover {
+    color: #ead2a1;
+  }
 }
 .about .col-right .article-container article p#intro::first-letter {
   font-size: 2.5em;
@@ -2949,9 +2962,14 @@ hamburger
   font-weight: 500;
 }
 .about .col-right .article-container article p i {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #485563;
   margin-right: 0.05rem;
+}
+@media (min-width: 768px) {
+  .about .col-right .article-container article p i {
+    font-size: 2rem;
+  }
 }
 .about .col-right .article-container article p.io-item {
   opacity: 0;
@@ -3766,6 +3784,17 @@ body {
 }
 body a {
   text-decoration: none;
+  transition: 0.25s;
+}
+@media (max-width: 820px) {
+  body a:active {
+    color: #ead2a1;
+  }
+}
+@media (min-width: 820px) {
+  body a:hover {
+    color: #ead2a1;
+  }
 }
 body p {
   color: #000;
