--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -176,9 +176,15 @@
                     font-weight: 400;
                     z-index: 2;
                     transition: 1.5s;
+                    
 
-                    .school{
-                        display: block;
+                    @include md {
+                        .title-break {
+                            display: none;
+                        }
+                    }
+                    .item-title{
+                        // display: block;
                         font-weight: 600;
                         color: $overlay-blue-dark;
                     }
@@ -188,10 +194,18 @@
                         color: $overlay-blue-darker;
                         font-weight: 500;
                         display: inline-block;
+                        width: max-content;
                         border-radius: .25rem;
-
-                        &:hover {
-                            color: $span-crimson;
+                        transition: .2s;
+                        @media (max-width: 820px){
+                            &:active {
+                                color: $span-gold;
+                            }
+                        }
+                        @media (min-width: 820px){
+                            &:hover {
+                                color: $span-gold;
+                            }
                         }
                     }
 
@@ -213,9 +227,12 @@
                     }
                     i {
                         // position: absolute;
-                        font-size: 2rem;
+                        font-size: 1.5rem;
                         color: $overlay-blue-light;
                         margin-right: .05rem;
+                        @include md {
+                            font-size: 2rem;
+                        }
                     }
                     // DATA SCROLL
                     &.io-item {
