--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ hamburger
   z-index: 50;
   left: 0;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 8vh;
   background: transparent;
   isolation: isolate;
