--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,7 @@
     z-index: 50;
     left: 0;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 8vh;
     // overflow: hidden;
     background: transparent;
@@ -102,7 +102,7 @@
             justify-content: space-between;
             width: 100%;
             height: 100%;
-            // background: red;
+            // border: 2px solid red;
             padding: .5rem 5vw;
             z-index: 5;
             @media (max-width: 1024px) {
