--- a/css/style.css
+++ b/css/style.css
@@ -604,31 +604,34 @@ hamburger
   transform: translateY(-11vh);
   transition: 1s;
 }
-#header .header #navbar .brand h1 {
+#header .header #navbar .brand p {
   font-size: 1rem;
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   text-transform: capitalize;
-  color: #f4f4f4;
   color: #ead2a1;
-  background-color: #20262e;
+  color: #f4f4f4;
+  background-color: #15191e;
   border: 1px solid #f4f4f4;
-  border: 1px solid #ead2a1;
+  border: 1px solid #fff2;
   padding-left: 0.2rem;
   border-radius: 0.25rem;
   overflow: hidden;
   transition: 0.5s;
 }
 @media (min-width: 768px) {
-  #header .header #navbar .brand h1 {
+  #header .header #navbar .brand p {
     font-size: 1.25rem;
   }
 }
-#header .header #navbar .brand h1 span {
-  margin-left: 0.2rem;
-  padding: 0 0.2rem 0 0.2rem;
+#header .header #navbar .brand p span {
+  padding-right: 0.2rem;
   background: linear-gradient(0deg, #deb86e, #ead2a1);
+  background: linear-gradient(#f4f4f4, #fff);
+  background: inherit;
   color: #29323c;
+  color: inherit;
+  opacity: 0.7;
   border-radius: 0;
   transition: 0.2s;
 }
