--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -115,19 +115,20 @@
                 opacity: 1;
                 transform: translateY(-11vh);
                 transition: 1s;
-                h1 {
-                    font-size: 1rem;
-                    font-family: $font-title;
-                    font-weight: 400;
+                p {
                     @media (min-width: 768px) {
                         font-size: 1.25rem;
                     }
+                    font-size: 1rem;
+                    font-family: $font-title;
+                    font-weight: 400;
                     text-transform: capitalize;
-                    color: $text-light;
                     color: $span-gold;
-                    background-color: $overlay-blue-darker;
+                    color: $text-light;
+                    background-color: $overlay-blue-darkest;
+                    // border: 1px solid $span-gold;
                     border: 1px solid $text-light;
-                    border: 1px solid $span-gold;
+                    border: 1px solid #fff2;
                     padding-left: .2rem;
                     border-radius: .25rem;
                     overflow: hidden;
@@ -135,10 +136,16 @@
                     // text-shadow: 0 0 5px $text-shadow-red;
 
                     span {
-                        margin-left: .2rem;
-                        padding: 0 .2rem 0 .2rem;
+                        // margin-left: .2rem;
+                        // padding: 0 .2rem 0 .2rem;
+                        // padding: 0 .2rem 0 0;
+                        padding-right: .2rem;
                         background: $button-gold;
+                        background: linear-gradient( #f4f4f4, #fff);
+                        background: inherit;
                         color: $overlay-blue-dark;
+                        color: inherit;
+                        opacity: .7;
                         border-radius: 0;
                         // padding: .05rem .3rem .05rem .05rem;
                         // background: $span-gold;
