--- a/css/style.css
+++ b/css/style.css
@@ -716,12 +716,15 @@ hamburger
     transform: translateY(1rem);
     color: #f4f4f4;
     font-size: 1rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     transition: 0.5s;
   }
   #header .header #navbar .nav-list .links-container .contact-links a i {
+    color: #fff7;
     color: #ead2a1;
+    margin-right: 0.2rem;
     width: 1.5rem;
+    border-right: 1px solid #fff4;
   }
   #header .header #navbar .nav-list .links-container.active {
     left: 0;
